--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -315,7 +315,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">Aktualisieren</string>
     <string name="wrap_words">Zeilenumbruch</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Weicher Zeilenumbruch falls der Text nicht auf den Bildschirm passt. Andernfalls wird horizontales Scrollen aktiviert.</string>
-    <string name="recursive_search_in_current_directory">Rekursive Suche im aktuellen Verzeichnis. Wenn Suchbegriff einen Stern (*) enthält wird Regex-Suche verwendet, andernfalls wird überprüft ob der Suchbegriff vorhanden ist.</string>
+    <string name="recursive_search_in_current_directory">Rekursive Suche im aktuellen Verzeichnis.</string>
     <string name="always_open_with_this_app">Immer mit dieser App öffnen</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Dateien immer mit dieser App öffnen wenn die Liste die Dateiendung enthält. Nutze z. B. \'None, .html, .css, .js\' wenn du Web-Dateien und Dateien ohne Endung editieren möchtest.</string>
     <string name="template">Vorlage</string>
@@ -402,6 +402,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Einstellungen aus json-Datei importieren. Nach erfolgreichem Import wird die App neu gestartet.</string>
     <string name="failed_to_restore_settings_from_backup">Fehler beim Wiederherstellen der Einstellungen aus der Sicherung</string>
     <string name="newline_is_new_paragraph">Newline = neuer Absatz</string>
+    <string name="search_in_content">Inhalte durchsuchen</string>
+    <string name="max_search_depth">Suchtiefe</string>
+    <string name="ignore_list">Liste ignorieren</string>
+    <string name="do_not_search_specified_files_and_folders">Angegebene Dateien und Ordner nicht durchsuchen.\nNeue Zeile als Trennzeichen verwenden.\nVerwenden Sie Anführungszeichen für exakte Verzeichnisnamen: \"Test\".\nOder verwenden Sie Regex \'^[.].*\'\nBeispiele: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.*.ini</string>
+    <string name="regex_search">Regex-Suche</string>
+    <string name="case_sensitive">Groß-/Kleinschreibung</string>
+    <string name="stop_search_after_first_match">Suche nach dem ersten Treffer stoppen</string>
+    <string name="regex_can_not_be_compiled">Regex kann nicht aufgelöst werden</string>
     <string name="keep_both">Beides behalten</string>
     <string name="skip">Überspringen</string>
     <string name="overwrite">Überschreiben</string>
@@ -411,4 +419,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' existiert bereits in %s</string>
     <string name="additional_contexts_and_projects">Zusätzliche Kontexte und Projekte</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Geben Sie einen durch Leerzeichen getrennten @contexts und +Projekte ein. Diese werden immer im todo.txt Einfügedialog sichtbar sein.</string>
+    <string name="infinite">Endlos</string>
 </resources>
