--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -315,7 +315,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">Ricarica</string>
     <string name="wrap_words">Parole a capo</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Manda a capo il testo se supera la dimensione della riga; altrimenti abilita lo scorrimento orizzontale.</string>
-    <string name="recursive_search_in_current_directory">Ricerca ricorsiva nella cartella corrente. Se la query contiene un asterisco (*) allora si usa la ricerca regex, altrimenti la si cerca direttamente.</string>
+    <string name="recursive_search_in_current_directory">Ricerca ricorsiva nella directory corrente.</string>
     <string name="always_open_with_this_app">Apri sempre con quest\'app</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Apri sempre i file con questa app quando la lista contiene l\'estensione del file. Usa \'Nessuno, .html, .css , .js\' per esempio se si desidera modificare i file web e i file senza estensione.</string>
     <string name="template">Template</string>
@@ -402,6 +402,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importa le impostazioni dal file json di backup. Al successo, l\'app viene riavviata.</string>
     <string name="failed_to_restore_settings_from_backup">Impossibile ripristinare le impostazioni dal backup</string>
     <string name="newline_is_new_paragraph">Newline = nuovo paragrafo</string>
+    <string name="search_in_content">Cerca nel contenuto</string>
+    <string name="max_search_depth">Profondità di ricerca</string>
+    <string name="ignore_list">Ignora i seguenti</string>
+    <string name="do_not_search_specified_files_and_folders">Non cercare file e cartelle specificati.\nUsa una nuova riga come separatore.\nUsa le virgolette per nomi esatti di directory: \"Test\".\nOppure usa la regex \'^[.].*\'\nEsempi: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Ricerca con regex</string>
+    <string name="case_sensitive">Distingui maiuscole e minuscole</string>
+    <string name="stop_search_after_first_match">Interrompe la ricerca dopo la prima corrispondenza</string>
+    <string name="regex_can_not_be_compiled">La regex non può essere compilata</string>
     <string name="keep_both">Mantieni entrambi</string>
     <string name="skip">Salta</string>
     <string name="overwrite">Sovrascrivere</string>
@@ -411,4 +419,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' esiste già in %s</string>
     <string name="additional_contexts_and_projects">Contesti e progetti aggiuntivi</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Inserisci @contesti e +progetti separati da spazi. Essi saranno sempre visibili nelle finestre di inserimento per todo.txt.</string>
+    <string name="infinite">Infinito</string>
 </resources>
