--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -39,7 +39,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Udostępnij do&#8230;</string>
     <string name="share">Udostępnij</string>
     <string name="search">Szukaj</string>
-    <string name="display_converted_markup">Wyświetl przekonwertowane znaczniki</string>
+    <string name="display_converted_markup">Wyświetlanie znaczników markup</string>
     <string name="editor">Edytor</string>
     <string name="folders">Foldery</string>
     <string name="files">Pliki</string>
@@ -48,7 +48,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="html_as_plaintext">HTML (jako czysty tekst)</string>
     <string name="document_editor_font">Czcionka edytora</string>
     <string name="theme">Motyw</string>
-    <string name="open_existing_files_in_view_mode">Otwórz istniejące pliki w trybie podglądu</string>
+    <string name="open_existing_files_in_view_mode">Otwieraj pliki w trybie podglądu</string>
     <string name="about">Informacje</string>
     <string name="plaintext">Zwykły tekst</string>
     <string name="file">Plik</string>
@@ -116,7 +116,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="refresh">Odśwież</string>
     <string name="create_shortcut">Utwórz skrót</string>
     <string name="tried_to_create_shortcut_for_this_notice">Próbowałem dodać skrót do ekranu głównego do edycji tego dokumentu. Pamiętaj, że niektóre programy uruchamiające mogą tego nie obsługiwać.</string>
-    <string name="file_not_in_save_path_do_import_notice__appspecific">Wybrany plik nie znajduje się w folderze notatnika aplikacji. Czy chciałbyś skopiować go do obecnego folderu? To spowoduje nadpisanie wszystkich plików z taką samą nazwą.</string>
+    <string name="file_not_in_save_path_do_import_notice__appspecific">Wybrany plik znajduje się poza folderem notatek. Czy chciałbyś skopiować go do obecnego folderu? To nadpisze plik z taką samą nazwą.</string>
     <string name="file_not_in_current_folder_do_copy__appspecific">Plik nie jest zlokalizowany w bieżącym folderze. Czy chcesz skopiować go do bieżącego folderu? Spowoduje to nadpisanie istniejącego pliku o tej samej nazwie.</string>
     <string name="files_and_folders">Pliki i foldery</string>
     <string name="document_browser">Przeglądarka dokumentów</string>
@@ -149,14 +149,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="none">Nic</string>
     <string name="other">Inne</string>
     <string name="empty_file">Pusty plik</string>
-    <string name="break_page_pdf_print">Strona przerwania (PDF/Drukuj)</string>
+    <string name="break_page_pdf_print">Podział strony (PDF/drukowanie)</string>
     <string name="underline">Podkreślenie</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">Określa, czy należy podświetlać kody kolorów heksadecymalnych w zależności od koloru</string>
     <string name="underline_hex_color_codes">Podkreślaj kolory w układzie szesnastkowym (Hex)</string>
     <string name="insert_current_date_when_starting_new_task">Wstawianie bieżącej daty podczas uruchamiania nowego zadania</string>
     <string name="tasks_with_todays_date">Zadania z dzisiejszą datą</string>
     <string name="append_contexts_and_projects">Dodaj konteksty i projekty</string>
-    <string name="append_contexts_and_projects_on_end_of_task">Dołącz kontekst i projekty na końcu zadania przy użyciu odpowiedniej akcji tekstowej</string>
+    <string name="append_contexts_and_projects_on_end_of_task">Dołącz konteksty i projekty na końcu zadania przy użyciu odpowiedniej akcji tekstu</string>
     <string name="rtl_rendering">Renderowanie RTL</string>
     <string name="highlight_line_ending">Podświetl zakończenie linii</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">Podświetlaj spacje na końcu lini zawierające dwie lub więcej spacji</string>
@@ -175,7 +175,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_page_up">Strona w górę (Page Up)</string>
     <string name="key_page_down">Strona w dół (Page Down)</string>
     <string name="move_text_one_line_up">Przenieś tekst o jedną linię w górę</string>
-    <string name="move_text_one_line_down">Przesuń tekst o jedną linię w dół</string>
+    <string name="move_text_one_line_down">Przenieś tekst o jedną linię w dół</string>
     <string name="start_new_line_below">Rozpocznij nową linię poniżej</string>
     <string name="key_pos_1">Początek Linii (Pos Home)</string>
     <string name="key_pos_end">Koniec Linii (Pos End)</string>
@@ -244,8 +244,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="table_of_contents">Spis treści</string>
     <string name="miscellaneous">Różne</string>
     <string name="textaction">Akcja tekstu</string>
-    <string name="textactions">Akcje tekstowe</string>
-    <string name="prefer_view">Preferuj widok</string>
+    <string name="textactions">Działania na tekście</string>
+    <string name="prefer_view">Preferuj podgląd</string>
     <string name="no_calendar_app_is_installed">Brak aplikacji Kalendarza!</string>
     <string name="popular_documents">Popularne dokumenty</string>
     <string name="color">Kolor</string>
@@ -282,13 +282,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="swipe_to_change_to_edit_or_view_mode">Przesuń, aby zmienić tryb edycji lub widoku (przeciwny do bieżącego trybu)</string>
     <string name="folder_first">Najpierw katalogi</string>
     <string name="go_to">Przejdź do</string>
-    <string name="appdata_public">Dane AppData (publiczne)</string>
-    <string name="appdata_private">Dane aplikacji (prywatne)</string>
+    <string name="appdata_public">Folder danych aplikacji (publiczny)</string>
+    <string name="appdata_private">Folder danych aplikacji (prywatny)</string>
     <string name="appdata_sdcard">AppData (karta SD)</string>
     <string name="internal_storage">Pamięć wewnętrzna</string>
     <string name="open_the_document_from_main_view">Możesz otworzyć dokument z widoku głównego aplikacji, w przeglądarce plików lub w launcherze. Istnieje również możliwość udostępnienia tekstu do Markor.</string>
-    <string name="notebook_is_the_home_of_your_files">Notatnik jest katalogiem, który Markor ładuje w przeglądarce plików po uruchomieniu aplikacji. To jest folder domowy Twoich plików.</string>
-    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote to najszybsza opcja zapisywania notatek. Jest to plik w formacie Markdown z domyślną lokalizacją &gt;Notatnik/QuickNote. d&lt;, możesz ustawić niestandardową ścieżkę plików w ustawieniach.</string>
+    <string name="notebook_is_the_home_of_your_files">Notatki to katalog, który Markor ładuje w przeglądarce plików po uruchomieniu aplikacji. To domyślny folder dla Twoich plików.</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote to najszybsza możliwość robienia notatek. Jest to plik w formacie Markdown z domyślną lokalizacją &gt;Notatki/QuickNote.md&lt;. Możesz wybrać własną lokalizację w ustawieniach.</string>
     <string name="todo_is_the_easiest_way_">Zarządzaj zadaniami za pomocą ToDo. Jest to plik w formacie todo.txt z domyślną lokalizacją &gt;Notebook/todo. xt&lt;, możesz ustawić własną ścieżkę plików w ustawieniach.</string>
     <string name="navigationbar_color">Kolor paska nawigacji</string>
     <string name="black">Czarny</string>
@@ -312,7 +312,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Miękka przerwa, jeśli tekst nie pasuje do szerokości ekranu. W przeciwnym razie włącz przewijanie poziome.</string>
     <string name="recursive_search_in_current_directory">Wyszukiwanie rekursywne w bieżącym katalogu.</string>
     <string name="always_open_with_this_app">Zawsze otwieraj za pomocą tej aplikacji</string>
-    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Zawsze otwieraj pliki z tą aplikacją, gdy lista zawiera rozszerzenie pliku. Użyj \'Brak, .html, . ss , .js, na przykład, jeśli chcesz edytować pliki internetowe i te bez rozszerzenia pliku.</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Zawsze otwieraj pliki o wybranych rozszerzeniach w tej aplikacji. Przykładowo, użyj \'None, .html, .css , .js\', jeśli chcesz edytować pliki internetowe i te bez rozszerzenia pliku.</string>
     <string name="template">Szablon</string>
     <string name="send_debug_log">Wyślij dziennik debugowania</string>
     <string name="print_pdf">Drukuj PDF</string>
@@ -356,8 +356,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="link_color">Kolor linku</string>
     <string name="add_context">Dodaj kontekst</string>
     <string name="add_project">Dodaj projekt</string>
-    <string name="archive_completed_tasks">Archiwizuj zakończone zadania</string>
-    <string name="sort_alphabetically">Sortuj alfabetycznie</string>
+    <string name="archive_completed_tasks">Archiwizuj wykonane zadania</string>
+    <string name="sort_alphabetically">Sortuj</string>
     <string name="create_new_file_or_folder">Utwórz nowy plik lub folder</string>
     <string name="choose_format">Wybierz format</string>
     <string name="selected">Wybrane</string>
@@ -377,8 +377,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Nie można odszyfrować zawartości pliku. Czy użyłeś złego hasła? Czy plik jest naprawdę zaszyfrowany szyfrowaniem Markors AES?</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">Hasło już ustawione. Ustawienie nowego hasła nadpisze istniejące hasło i może nie mieć już dostępu do plików, jeśli zapomnisz hasła.</string>
     <string name="code_block">Blok kodu</string>
-    <string name="add_completion_date">Dodaj datę zakończenia</string>
-    <string name="add_completion_date_for_todos_when_marking_them_as_done">Dodaj datę zakończenia dla zadań przy oznaczaniu ich jako wykonane</string>
+    <string name="add_completion_date">Dodaj datę wykonania</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Dodaj datę ukończenia zadania przy oznaczaniu jako wykonane</string>
     <string name="file_description_format">Format opisu pliku</string>
     <string name="file_description_format_dialog">Format opisu w każdej przeglądarce plików. Postępuje zgodnie z regułami SimpleDateFormat Androida, z dodatkiem FS do pokazywania rozmiaru pliku. Pozostaw puste, aby użyć domyślnego formatu dla swojego języka.\n\nPrzykładowe wejście:\nFS yyyy MMM dd hh:mm:ss aa\nFormat wyjściowy:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Wczytywanie domyślnych wartości</string>
@@ -398,7 +398,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="failed_to_restore_settings_from_backup">Nie udało się przywrócić ustawień z kopii zapasowej</string>
     <string name="newline_is_new_paragraph">Nowa linia = nowy ustęp</string>
     <string name="search_in_content">Szukaj w zawartości</string>
-    <string name="max_search_depth">Głębokość wyszukiwania</string>
+    <string name="max_search_depth">Zasięg wyszukiwania</string>
     <string name="ignore_list">Ignoruj listę</string>
     <string name="do_not_search_specified_files_and_folders">Nie szukaj określonych plików i folderów.\nUżyj nowej linii jako separatora.\nUżyj cytatów dla dokładnych nazw dirów: \"Test\".\nlub użyj Regex \'^[.].*\'\nPrzykłady: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Wyszukiwanie Regex</string>
