[ci skip] Update translations (Kabyle)

--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -179,4 +179,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="close">Mdel</string>
     <string name="favourite">Inurifen</string>
     <string name="reload">Smiren</string>
+    <string name="rotate">Tuzya</string>
 </resources>
