--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -57,6 +57,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">Renderizar para línguas de escrita da direita à esquerda</string>
     <string name="error_cannot_create_notebook_dir__appspecific">Erro: Impossível criar pasta de becape</string>
     <string name="last_modified_witharg">Últimas modificações: %s</string>
+    <string name="last_modified">Última modificação</string>
     <string name="select_this_folder">Selecionar esta pasta</string>
     <string name="select">Selecionar</string>
     <string name="create">Criar</string>
@@ -316,6 +317,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">Pesquisa recursiva no diretório atual.</string>
     <string name="always_open_with_this_app">Sempre abrir com este aplicativo</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Utilizar sempre esse aplicativo se a extensão do arquivo estiver nesta lista. Utilize, por exemplo, \'None, .html, .css , .js\' se quiser editar arquivos web ou arquivos que não tenham extensão.</string>
+    <string name="rotate">Girar</string>
     <string name="template">Modelo</string>
     <string name="send_debug_log">Enviar informações de depuração</string>
     <string name="print_pdf">Imprimir/PDF</string>
